# py379

./: _yf_plot_mySymbols.py  download_symbols_OHLCV.py  load_pickled_df_OHLCV.py  myUtils.py  my_help.ipynb  my_yfinance copy.ipynb  my_yfinance.ipynb  my_yfinance.py  pf_vectorized.ipynb  pm_run.ipynb  pm_test.ipynb  print_n_plot_symbols.py  ps1_df_ps1n2_results.32.py  pyproject copy.toml  pyproject.toml  pyproject_0.toml  symbols_close.py  test_venv.ipynb  test_venv.py  trash.ipynb  trash.py  work copy.ipynb  work.ipynb  work.py  work2.ipynb  yf_0AdjOHLV_download_chunks.ipynb  yf_1clean_OHLCV_close.ipynb  yf_1clean_OHLCV_close_working.ipynb  yf_2perf_ranks.ipynb  yf_2split_train_val_test.ipynb  yf_3f_random_iloc_slices.ipynb  yf_3random_iloc_slices.ipynb  yf_3train_valitdate.ipynb  yf_4perf_ranks.ipynb  yf_4symb_perf_stats_vectorized.ipynb  yf_52wkHi_screen.ipynb  yf_5eval.ipynb  yf_5read_symbols_perf_ranks.ipynb  yf_6eval copy.ipynb  yf_6eval.ipynb  (+23 more)
bb/: item_sale copy.ipynb  item_sale.ipynb  item_sale_1.ipynb  item_sale_clean.ipynb  item_sale_group.ipynb
tests/: my_yfinance.ipynb  test_py379.py  test_venv.ipynb  test_venv.py
vg/: vg_stock_info copy.ipynb  vg_stock_info.ipynb
