[tool.poetry]
name = "py379"
version = "0.1.0"
description = ""
authors = ["pympk <yee_ping@yahoo.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
pandas = "1.3.5"
numpy = "1.21.6"
matplotlib = "^3.5.2"
ipykernel = "^6.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"